[B]Version 1.0.4[/B]

- fix bug when there were no games played in a prior week
- list weeks using the season bounds specified in the service configuration
- improve speed of prior week menu (remove call to web request)

[B]Version 1.0.3[/B]

- fix crash with invalid home or away team abbreviations

[B]Version 1.0.2[/B]

- improve live and replay match menu layout
- add video channels

[B]Version 1.0.1[/B]

- fix the live stream WS calls. Now all live games work.

[B]Version 1.0.0[/B]

- initial revision. Plays live and on-demand matches from the MLS Live service.