@@ -10,6 +10,10 @@ parser.add_option('-p', '--password', type='string', dest='password',
                   help="Password for authentication")
 parser.add_option('-g', '--game', type='string', dest='game',
                   help="Game to display")
+parser.add_option('-l', '--list-weeks', action='store_true', dest='weeks',
+                  help='List weeks')
+parser.add_option('-w', '--week', type='string', dest='week',
+                  help="List games of the week")
 parser.add_option('-o', '--offset', type='int', dest='offset', default=0,
                   help="Week offset (from present)")
 parser.add_option('-c', '--channel', type='string', dest='channel',
@@ -32,10 +36,26 @@ if not my_mls.login(options.user, options.password):
     print "Unable to authenticte with MLS live. please set username and password."
     sys.exit(1)
 
-weeks = my_mls.getWeeks()
-print weeks
+# my_mls.getGames(values['week']):
 
-if options.channel == None:
+if options.weeks:
+    weeks = my_mls.getWeeks()
+    for week in sorted(weeks.keys()):
+        print "'" + weeks[week] + "'"
+    sys.exit()
+if options.week != None:
+    weeks = my_mls.getWeeks()
+    for wkey in weeks.keys():
+        if weeks[wkey] == options.week:
+            week_url = wkey
+
+    if not week_url == None: 
+        print week_url
+        games = my_mls.getGames(week_url)
+        for game in games:
+            print game
+    sys.exit()
+elif options.channel == None:
     print "Video Channels:"
     channels = my_mls.getVideoChannels()
     for channel in channels:
